src/OpenCvSharp/Internal/Interop/NativeMethods.ML.DllImport.cs


        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_logistic_regression_get_term_criteria")]
        internal static extern int MlLogisticRegressionGetTermCriteria(IntPtr model, out int type, out int maxCount, out double epsilon);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_logistic_regression_set_term_criteria")]
        internal static extern int MlLogisticRegressionSetTermCriteria(IntPtr model, int type, int maxCount, double epsilon);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_logistic_regression_get_learnt_thetas")]
        internal static extern int MlLogisticRegressionGetLearntThetas(IntPtr model, IntPtr dst);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_svmsgd_create")]
        internal static extern int MlSVMSGDCreate(out IntPtr model);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_svmsgd_load")]
        internal static extern int MlSVMSGDLoad(byte[] filepath, byte[] nodeName, out IntPtr model);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_svmsgd_get_weights")]
        internal static extern int MlSVMSGDGetWeights(IntPtr model, IntPtr dst);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_svmsgd_get_shift")]
        internal static extern int MlSVMSGDGetShift(IntPtr model, out float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_svmsgd_set_optimal_parameters")]
        internal static extern int MlSVMSGDSetOptimalParameters(IntPtr model, int svmsgdType, int marginType);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_svmsgd_get_int")]
        internal static extern int MlSVMSGDGetInt(IntPtr model, int propertyId, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_svmsgd_set_int")]
        internal static extern int MlSVMSGDSetInt(IntPtr model, int propertyId, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_svmsgd_get_float")]
        internal static extern int MlSVMSGDGetFloat(IntPtr model, int propertyId, out float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_svmsgd_set_float")]
        internal static extern int MlSVMSGDSetFloat(IntPtr model, int propertyId, float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_svmsgd_get_term_criteria")]
        internal static extern int MlSVMSGDGetTermCriteria(IntPtr model, out int type, out int maxCount, out double epsilon);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_svmsgd_set_term_criteria")]
        internal static extern int MlSVMSGDSetTermCriteria(IntPtr model, int type, int maxCount, double epsilon);
    }
}
#endif
